[workspace]
members = ["git_fetch_concurrenty"]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Louis <836250617@qq.com>"]
description = ""
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/git_fetch_concurrently"

[workspace.dependencies]
git_fetch_concurrenty = { path = "git_fetch_concurrenty" }
# async
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
