[package]
name = "git_fetch_concurrenty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Do `git fetch -p && git gc` in each sub directory concurrently."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.86"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "signal",
    "fs",
    "process",
    "macros",
] }
tokio-stream = { workspace = true, features = ["fs"] }
